RbA Build/src/objects/Cost_Center__c.object
<CustomObject>
    <description>Junction between the financial account number (of type cost center) and products.</description>
    <fields>
        <fullName>Cost_Center_Number__c</fullName>
        <description>The cost center value</description>
        <inlineHelpText>The cost center value</inlineHelpText>
        <label>Cost Center Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>The cost center (stored in the financial account numbers as type &apos;Cost Center&apos;)</description>
        <inlineHelpText>The cost center (stored in the financial account numbers as type &apos;Cost Center&apos;)</inlineHelpText>
        <label>Cost Center</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account Number must be of type &apos;Cost Center&apos;.</errorMessage>
            <filterItems>
                <field>Financial_Account_Number__c.Account_Type__c</field>
                <operation>equals</operation>
                <value>Cost Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account_Number__c</referenceTo>
        <relationshipLabel>Cost Centers</relationshipLabel>
        <relationshipName>Cost_Centers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the product to relate to the cost center.</description>
        <inlineHelpText>Select the product to relate to the cost center.</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Product, Construction Materials, Service Product, Legacy Service</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cost Centers</relationshipLabel>
        <relationshipName>Cost_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cost Center</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Cost Center Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Centers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>